--- a/src/index.css
+++ b/src/index.css
@@ -63,9 +63,17 @@ p {
   padding-right: 37px;
 }
 
+.cursor-pointer{
+  cursor: pointer;
+}
+
 .px-15 {
   padding-left: 15px;
   padding-right: 15px;
+}
+
+.pb-xl {
+  padding-bottom: 60px;
 }
 
 .pb-50 {
@@ -193,7 +201,21 @@ p {
   grid-row: 3/4;
 }
 
-@media (max-width:700px) {
+
+@media (min-width:992px) {
+  .gap-78 {
+    gap: 78px;
+  }
+
+}
+
+@media (max-width:992.99px) {
+  .min-h-screen {
+    min-height: 100vh;
+  }
+}
+
+@media (max-width:700.99px) {
   .grid-item-1 {
     grid-column: 1/2;
     grid-row: 1/2;
@@ -260,11 +282,5 @@ p {
 
   .pb-8 {
     padding-bottom: 8px;
-  }
-}
-
-@media (min-width:992px) {
-  .gap-78 {
-    gap: 78px;
   }
 }
